			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.1906 2001/10/10 08:41:37 sakane Exp $

<200110>
Wed Oct 10 17:38:05 JST 2001 sakane@kame.net
	* kame/kame/racoon:
	Fixed racoon crash when uni-directional policy is defined.
	racoon negoticate two SAs even in the case of the uni-directional
	policy.

Wed Oct 10 04:52:54 JST 2001  itojun@iijlab.net
	* bsdi4: use PULLDOWN_TEST (m_pulldown) codepath.  improves conformance
	  when ipv6 extension headers are present.

Wed Oct 10 10:27:24 JST 2001  itojun@iijlab.net
	* netbsd/sys/netinet/raw_ip.c: fix a typo which could lead to kernel
	  panic when ICMPv4 is returned against raw ip socket.
	  reported by kato@wide

2001-10-10  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/rtadvd/rtadvd.c (find_prefix, prefix_match): corrected
	prefix calculation:
	- avoid invalid pointer access when bytelen is a multiple of 8
	- avoid using the right shift operator to make the code look safer

2001-10-09  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/rtadvd/config.c (getconfig): made configuration parser
	compatible with FreeBSD 4.4-RELEASE, in terms of the route
	information option:
	- allowed rtrXXX instead of rtXXX.
	- made route lifetime optional.
	In any case, some warning messages are printed as well, so that the
	user can notice the change and fix the configuration.

Tue Oct  9 08:43:04 JST 2001 sakane@kame.net
	* kame/kame/racoon/schedule.c:
	the entry of the schedule is marked with dead before the function in
	the entry will be called.  some schedules, check_rtsock(),
	check_flushsa_stub, woulbe be remained in the schulder even after they
	were excuted. sched_scrub_param() is unnecessary probably anymore.

2001-10-04  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/contrib/bind/src/lib/irs/dns_ho.c (add_hostent):
	calculated alignment correctly.  Without this fix, gethostbyname()
	would not work correctly when the function handles more than one
	address.