@@ -263,6 +263,7 @@ INET6			opt_inet6.h
 ENABLE_DEFAULT_SCOPE	opt_inet6.h
 IP6_AUTO_LINKLOCAL	opt_inet6.h
 MIP6			opt_mip6.h
+MIP6_ALLOW_COA_FALLBACK	opt_mip6.h
 MIP6_DEBUG		opt_mip6.h
 NATPT			opt_natpt.h
 NATPT_NAT		opt_natpt.h
