@@ -31,4 +31,5 @@ option		ALTQ_PRIQ	#priority queue
 
 option		MIP6
 option		MIP6_DEBUG
+option		MIP6_ALLOW_COA_FALLBACK
 pseudo-device	hif		1
